Refactoring based on comments